# Artificog

./: .gitignore  CMakeLists.txt  LICENSE  Network.json  README.md
Examples/MNIST/: IDX1_DATA.h  IDX3_DATA.h  convert.sh  idx.h  main.cpp
src/: ArtificogHelper.h  Layer.h  Network.h  Weight.h  json.hpp  main.cpp
